    @javax.validation.Valid                      => net.sf.oval.constraint.AssertValidCheck
+ implemented [ oval-Bugs-2907399] added MessageValueFormatter and Validator.setMessageValueFormatter()
- fixed [ oval-Bugs-2973326] XMLConfigurer doesn't completely cover constraints
- fixed [ oval-Bugs-2973323 ] XSD scheme is not complete

2009-09-27 v1.40
================
+ added support for conditional constraint activation (added the when="" attribute)
* upgraded to GNU Trove 2.0.4, SLF4J 1.5.8, JRuby 1.3.1, Rhino 1.7R2, Groovy 1.6.4, MVEL 2.0.13, Paranamer 2.1
- parameter "declaringClass" of @AssertFieldConstraints was ignored during constraint validation
- fixed [ 2836116 ] DateRangeCheck contains bug in getMinMillis()
+ implemented [ 2821805] @DateRange should be tolerant
- corrected checking of BigDecimal by @NotNegative constraint  (thanks to Saleem)
+ added tolerance to @Past and @Future
+ implemented [ 2859133 ] Enhancement:@MatchPattern should be able to negate the match (thanks to Eric Lewis)
+ added ConstraintViolation.getCheckDeclaringContext() (thanks to Eric Lewis)
+ added appliesTo() attribute to constraints allowing to control if and how validation should be applied to childs of arrays, maps and collections (thanks to tomtran711)
- fixed [ 2799870 ] Wrong escaped unicode sequences in Messages_de.properties
- fixed [ 2865777 ] Wrong English error message for MinLength

2009-05-10 v1.32
================
+ added Brazilian Portuguese translation of the constraint violation messages [ 2593104 ] (thanks to Leonardo Pinto) 
+ introduced an interface implemented by Validator for supporting easier mocking
- fixed [ 2493925 ] java.util.NoSuchElementException if @AssertValid is used
- fixed [ 2495825 ] The profile feature of Validator is not thread safe
- fixed [ 2493379 ] array types in xml based configuration
- fixed [ 2579897 ] xml based configuration related to post/pre checks
- fixed [ 2723344 ] Should not call any method on not fully initialized object