@@ -140,9 +140,10 @@ public class Validator implements IValidator
 		}
 	}
 
+	private static final Log LOG = Log.getLog(Validator.class);
+
 	private static CollectionFactory collectionFactory = _createDefaultCollectionFactory();
 	private static OValContextRenderer contextRenderer = ToStringValidationContextRenderer.INSTANCE;
-	private static final Log LOG = Log.getLog(Validator.class);
 
 	private static MessageResolver messageResolver = ResourceBundleMessageResolver.INSTANCE;
 	private static MessageValueFormatter messageValueFormatter = ToStringMessageValueFormatter.INSTANCE;
